--- a/demos/plumber/index.html
+++ b/demos/plumber/index.html
@@ -6,6 +6,7 @@
   <title>Demo: Plumber | KWebDevelopment</title>
   <meta name="description" content="Sample client demo — plumbing services website." />
   <link rel="stylesheet" href="../../style.css" />
+  <link rel="stylesheet" href="theme.css" />
 </head>
 <body>
 <header>
@@ -15,7 +16,7 @@
       <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">Menu</button>
       <div class="links">
         <a href="#services">Services</a>
-        <a href="#gallery">Reviews</a>
+        <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
       </div>
       <div class="nav-cta">
@@ -27,8 +28,10 @@
 </header>
 
 <main>
-  <div class="wrap hero">
-    <div class="grid hero-grid">
+  <!-- Hero image: add hero.jpg to assets/demos/plumber/ -->
+  <div class="wrap hero" style="position: relative;">
+    <div class="hero-bg-img" style="position: absolute; inset: 0; background: var(--color-surface) url('../../assets/demos/plumber/hero.jpg') center/cover no-repeat; opacity: 0.25;"></div>
+    <div class="grid hero-grid" style="position: relative;">
       <div>
         <div class="pill">Demo site</div>
         <h1>Plumbing &amp; drain services you can trust.</h1>
@@ -65,17 +68,13 @@
 
   <section id="gallery" class="scroll-margin">
     <div class="wrap">
-      <h2>What customers say</h2>
-      <p class="section-lead muted">Sample testimonials area.</p>
-      <div class="testimonials-wrap top16">
-        <div class="testimonial-card">
-          <p class="quote">Fast, professional, and fair pricing.</p>
-          <p class="by">— Demo review</p>
-        </div>
-        <div class="testimonial-card">
-          <p class="quote">Fixed our water heater same day.</p>
-          <p class="by">— Demo review</p>
-        </div>
+      <h2>Gallery</h2>
+      <p class="section-lead muted">Recent jobs and installations.</p>
+      <!-- Add to assets/demos/plumber/: gallery1.jpg, gallery2.jpg, gallery3.jpg -->
+      <div class="grid cards top16 gallery-grid">
+        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/plumber/gallery1.jpg" alt="Job 1" class="gallery-img" /></div></div>
+        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/plumber/gallery2.jpg" alt="Job 2" class="gallery-img" /></div></div>
+        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/plumber/gallery3.jpg" alt="Job 3" class="gallery-img" /></div></div>
       </div>
     </div>
   </section>
@@ -101,6 +100,10 @@
   </div>
 </footer>
 
+<div class="demo-sticky-cta">
+  <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
+  <a class="btn primary" href="../../quote.html">Get a Quote</a>
+</div>
 <script src="../../assets/js/config.js"></script>
 <script src="../../script.js"></script>
 </body>
