--- a/index.html
+++ b/index.html
@@ -220,15 +220,9 @@
           <p class="muted">Forms and CTAs that work</p>
         </div>
       </div>
-      <div class="testimonials-wrap">
-        <div class="testimonial-card">
-          <p class="quote">Placeholder: Replace with a real testimonial when you have one.</p>
-          <p class="by">— Client, Business type</p>
-        </div>
-        <div class="testimonial-card">
-          <p class="quote">Placeholder: Another testimonial slot. No fake claims.</p>
-          <p class="by">— Client, Business type</p>
-        </div>
+      <div class="reviews-cta top16">
+        <p class="muted">See what clients are saying on Google.</p>
+        <a id="reviews-google-btn" href="#" class="btn primary" data-kweb-google-reviews target="_blank" rel="noopener">See all reviews on Google</a>
       </div>
     </div>
   </section>
@@ -266,22 +260,22 @@
   <section id="pricing" class="scroll-margin">
     <div class="wrap">
       <h2>Pricing</h2>
-      <p class="section-lead muted">Starting points. Final price depends on pages and features.</p>
+      <p class="section-lead muted">Two monthly plans. Each includes hosting, maintenance, and updates.</p>
       <div class="pricing-grid">
         <div class="pricing-card">
           <strong>Starter</strong>
-          <div class="price">$299+</div>
-          <p class="muted">1-page site, contact form, mobile-first, SEO basics.</p>
+          <div class="price">$199/mo</div>
+          <p class="muted">Monthly plan includes hosting, maintenance, and updates. 1-page site, contact form, mobile-first, SEO basics.</p>
           <a class="btn primary" href="quote.html">Get a Quote</a>
         </div>
         <div class="pricing-card">
           <strong>Business</strong>
-          <div class="price">$599+</div>
-          <p class="muted">More sections/pages, FAQs, stronger SEO structure.</p>
+          <div class="price">$399/mo</div>
+          <p class="muted">Monthly plan includes hosting, maintenance, and updates. More sections/pages, FAQs, stronger SEO structure.</p>
           <a class="btn primary" href="quote.html">Get a Quote</a>
         </div>
       </div>
-      <p class="small top10">You can change prices later — this is just a placeholder.</p>
+      <p class="small top10"><a href="quote.html" class="link">Custom</a> — no fixed price; tell us what you need.</p>
     </div>
   </section>
 
