--- a/demos/car-detailer/index.html
+++ b/demos/car-detailer/index.html
@@ -3,107 +3,117 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Demo: Car Detailer | KWebDevelopment</title>
-  <meta name="description" content="Sample client demo — auto detailing website." />
-  <link rel="stylesheet" href="../../style.css" />
+  <title>LuxeShine Detailing | Premium Auto Detailing</title>
+  <meta name="description" content="Interior deep cleans, ceramic coating, exterior wash &amp; wax. Mobile or drop-off. Dallas–Fort Worth." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,500;0,600;0,700;1,500&family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="theme.css" />
 </head>
 <body>
-<header>
-  <div class="wrap">
-    <nav>
-      <div class="logo"><a href="../../index.html">Demo: Detail</a></div>
-      <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">Menu</button>
-      <div class="links">
-        <a href="#services">Services</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact">Contact</a>
-      </div>
-      <div class="nav-cta">
-        <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
-        <a class="btn primary" href="../../quote.html">Get a Quote</a>
-      </div>
+<header class="site-header">
+  <div class="header-inner">
+    <a href="../../index.html" class="logo">LuxeShine</a>
+    <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">☰</button>
+    <nav class="main-nav links">
+      <a href="#services">Services</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact</a>
+      <a href="tel:+14694436874" class="link-cta" data-kweb-phone>Call</a>
+      <a href="../../quote.html" class="btn btn-gold">Get a Quote</a>
     </nav>
   </div>
 </header>
 
 <main>
-  <!-- Hero image: add hero.jpg to assets/demos/detailer/ -->
-  <div class="wrap hero" style="position: relative;">
-    <div class="hero-bg-img" style="position: absolute; inset: 0; background: var(--color-surface) url('../../assets/demos/detailer/hero.jpg') center/cover no-repeat; opacity: 0.25;"></div>
-    <div class="grid hero-grid" style="position: relative;">
-      <div>
-        <div class="pill">Demo site</div>
-        <h1>Auto detailing that makes your car shine.</h1>
-        <p class="muted">Interior deep cleans, exterior wash &amp; wax, ceramic coating. Mobile or drop-off.</p>
-        <div class="cta-row">
-          <a class="btn primary" href="../../quote.html">Get a Quote</a>
-          <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <section id="services" class="scroll-margin">
-    <div class="wrap">
-      <h2>Our services</h2>
-      <p class="section-lead muted">Full-service auto care.</p>
-      <div class="grid cards top16">
-        <div class="card">
-          <strong>Interior detailing</strong>
-          <p class="muted">Deep clean, upholstery, leather, odor removal.</p>
-        </div>
-        <div class="card">
-          <strong>Exterior wash &amp; wax</strong>
-          <p class="muted">Hand wash, clay bar, sealant, headlight restore.</p>
-        </div>
-        <div class="card">
-          <strong>Ceramic coating</strong>
-          <p class="muted">Long-lasting protection and shine.</p>
-        </div>
-      </div>
-      <p class="top16"><a href="../../quote.html" class="btn primary">Get a Quote</a></p>
-    </div>
-  </section>
-
-  <section id="gallery" class="scroll-margin">
-    <div class="wrap">
-      <h2>Before &amp; after</h2>
-      <p class="section-lead muted">Sample gallery.</p>
-      <!-- Add to assets/demos/detailer/: gallery1.jpg, gallery2.jpg, gallery3.jpg -->
-      <div class="grid cards top16 gallery-grid">
-        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/detailer/gallery1.jpg" alt="Detail 1" class="gallery-img" /></div></div>
-        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/detailer/gallery2.jpg" alt="Detail 2" class="gallery-img" /></div></div>
-        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/detailer/gallery3.jpg" alt="Detail 3" class="gallery-img" /></div></div>
+  <section class="hero">
+    <div class="hero-bg" style="background-image: url('https://images.unsplash.com/photo-1607860108855-64acf2078ed9?w=1400&q=85');"></div>
+    <div class="hero-shade"></div>
+    <div class="hero-inner">
+      <p class="hero-label">Premium auto detailing</p>
+      <h1>Make your car shine again.</h1>
+      <p class="hero-sub">Interior deep cleans, exterior wash &amp; wax, ceramic coating. Mobile or drop-off. By appointment.</p>
+      <div class="hero-btns">
+        <a href="../../quote.html" class="btn btn-gold">Book now</a>
+        <a href="tel:+14694436874" class="btn btn-outline" data-kweb-phone>Call</a>
       </div>
     </div>
   </section>
 
-  <section id="contact" class="scroll-margin">
-    <div class="wrap">
-      <h2>Contact</h2>
-      <p class="section-lead muted">Book a detail or get a quote.</p>
-      <div class="cta-row">
-        <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
-        <a class="btn primary" href="../../quote.html">Get a Quote</a>
+  <section id="services" class="section section-services">
+    <div class="container">
+      <h2 class="section-title">What we offer</h2>
+      <p class="section-lead">Full-service auto care. Every detail matters.</p>
+      <div class="services-row">
+        <article class="service-block">
+          <div class="service-img-wrap">
+            <img src="https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?w=400&q=80" alt="Interior detailing" loading="lazy" />
+          </div>
+          <h3>Interior detailing</h3>
+          <p>Deep clean, upholstery, leather care, odor removal. Your cabin like new.</p>
+        </article>
+        <article class="service-block">
+          <div class="service-img-wrap">
+            <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?w=400&q=80" alt="Exterior wash" loading="lazy" />
+          </div>
+          <h3>Exterior wash &amp; wax</h3>
+          <p>Hand wash, clay bar, sealant, headlight restore. Lasting shine.</p>
+        </article>
+        <article class="service-block">
+          <div class="service-img-wrap">
+            <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?w=400&q=80" alt="Ceramic coating" loading="lazy" />
+          </div>
+          <h3>Ceramic coating</h3>
+          <p>Long-lasting protection and a showroom finish. Premium option.</p>
+        </article>
       </div>
-      <p class="small top14">This is a demo. Get Quote sends leads to KWebDevelopment.</p>
+      <p class="section-cta"><a href="../../quote.html" class="btn btn-gold">Get a Quote</a></p>
+    </div>
+  </section>
+
+  <section id="gallery" class="section section-gallery">
+    <div class="container">
+      <h2 class="section-title">Before &amp; after</h2>
+      <p class="section-lead">Results that speak for themselves.</p>
+      <div class="gallery-masonry">
+        <div class="gallery-tile">
+          <img src="https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?w=600&q=80" alt="Interior detail" loading="lazy" />
+        </div>
+        <div class="gallery-tile">
+          <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a?w=600&q=80" alt="Exterior shine" loading="lazy" />
+        </div>
+        <div class="gallery-tile">
+          <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?w=600&q=80" alt="Finished detail" loading="lazy" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section section-contact">
+    <div class="container container-narrow">
+      <h2 class="section-title">Book your detail</h2>
+      <p class="section-lead">Call or request a quote. We’ll confirm your appointment.</p>
+      <div class="contact-btns">
+        <a href="tel:+14694436874" class="btn btn-gold btn-big" data-kweb-phone>Call (469) 443-6874</a>
+        <a href="../../quote.html" class="btn btn-outline btn-big">Get a Quote</a>
+      </div>
+      <p class="demo-note">Demo site · Get Quote sends leads to KWebDevelopment</p>
     </div>
   </section>
 </main>
 
-<footer>
-  <div class="wrap">
-    <a href="../../index.html">Back to KWebDevelopment</a>
-    <a href="../../quote.html" class="btn primary">Get a Quote</a>
-    <span class="small">Demo site</span>
+<footer class="site-footer">
+  <div class="footer-inner">
+    <a href="../../index.html">← Back to KWebDevelopment</a>
+    <a href="../../quote.html" class="btn btn-outline">Get a Quote</a>
   </div>
 </footer>
 
-<div class="demo-sticky-cta">
-  <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
-  <a class="btn primary" href="../../quote.html">Get a Quote</a>
+<div class="sticky-bar">
+  <a href="tel:+14694436874" class="btn btn-outline" data-kweb-phone>Call</a>
+  <a href="../../quote.html" class="btn btn-gold">Get a Quote</a>
 </div>
+
 <script src="../../assets/js/config.js"></script>
 <script src="../../script.js"></script>
 </body>
