--- a/demos/general-contractor/index.html
+++ b/demos/general-contractor/index.html
@@ -3,107 +3,114 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Demo: General Contractor | KWebDevelopment</title>
-  <meta name="description" content="Sample client demo — general contractor website." />
-  <link rel="stylesheet" href="../../style.css" />
+  <title>Riverside Builders | Remodeling &amp; Construction</title>
+  <meta name="description" content="Licensed general contractor. Kitchens, baths, additions. Free estimates. Dallas–Fort Worth." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+3:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="theme.css" />
 </head>
 <body>
-<header>
-  <div class="wrap">
-    <nav>
-      <div class="logo"><a href="../../index.html">Demo: GC</a></div>
-      <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">Menu</button>
-      <div class="links">
-        <a href="#services">Services</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact">Contact</a>
-      </div>
-      <div class="nav-cta">
-        <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
-        <a class="btn primary" href="../../quote.html">Get a Quote</a>
-      </div>
+<header class="site-header">
+  <div class="header-inner">
+    <a href="../../index.html" class="logo">Riverside Builders</a>
+    <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">☰</button>
+    <nav class="main-nav links">
+      <a href="#services">Services</a>
+      <a href="#gallery">Work</a>
+      <a href="#contact">Contact</a>
+      <a href="tel:+14694436874" class="btn-cta" data-kweb-phone>Call</a>
+      <a href="../../quote.html" class="btn-cta btn-primary">Get a Quote</a>
     </nav>
   </div>
 </header>
 
 <main>
-  <!-- Hero image: add hero.jpg to assets/demos/contractor/ -->
-  <div class="wrap hero" style="position: relative;">
-    <div class="hero-bg-img" style="position: absolute; inset: 0; background: var(--color-surface) url('../../assets/demos/contractor/hero.jpg') center/cover no-repeat; opacity: 0.25;"></div>
-    <div class="grid hero-grid" style="position: relative;">
-      <div>
-        <div class="pill">Demo site</div>
-        <h1>Quality remodeling &amp; construction.</h1>
-        <p class="muted">Licensed general contractor. Kitchens, baths, additions, and repairs. Free estimates.</p>
-        <div class="cta-row">
-          <a class="btn primary" href="../../quote.html">Get a Quote</a>
-          <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <section id="services" class="scroll-margin">
-    <div class="wrap">
-      <h2>Our services</h2>
-      <p class="section-lead muted">Residential and light commercial.</p>
-      <div class="grid cards top16">
-        <div class="card">
-          <strong>Kitchen &amp; bath remodeling</strong>
-          <p class="muted">Full remodels, cabinets, countertops, tile.</p>
-        </div>
-        <div class="card">
-          <strong>Room additions</strong>
-          <p class="muted">Design and build to match your home.</p>
-        </div>
-        <div class="card">
-          <strong>Repairs &amp; maintenance</strong>
-          <p class="muted">Drywall, flooring, trim, handyman work.</p>
-        </div>
-      </div>
-      <p class="top16"><a href="../../quote.html" class="btn primary">Get a Quote</a></p>
-    </div>
-  </section>
-
-  <section id="gallery" class="scroll-margin">
-    <div class="wrap">
-      <h2>Recent work</h2>
-      <p class="section-lead muted">Sample project gallery.</p>
-      <!-- Add to assets/demos/contractor/: gallery1.jpg, gallery2.jpg, gallery3.jpg -->
-      <div class="grid cards top16 gallery-grid">
-        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/contractor/gallery1.jpg" alt="Project 1" class="gallery-img" /></div></div>
-        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/contractor/gallery2.jpg" alt="Project 2" class="gallery-img" /></div></div>
-        <div class="card"><div class="portfolio-card"><img src="../../assets/demos/contractor/gallery3.jpg" alt="Project 3" class="gallery-img" /></div></div>
+  <section class="hero">
+    <div class="hero-bg" style="background-image: url('https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=1200&q=80');"></div>
+    <div class="hero-overlay"></div>
+    <div class="hero-content">
+      <p class="hero-tag">Licensed &amp; Insured · DFW</p>
+      <h1>Quality remodeling &amp; construction you can trust.</h1>
+      <p class="hero-lead">Kitchens, baths, room additions, and repairs. We work with you from plan to finish. Free estimates.</p>
+      <div class="hero-buttons">
+        <a href="../../quote.html" class="btn btn-primary">Get a Free Estimate</a>
+        <a href="tel:+14694436874" class="btn btn-outline" data-kweb-phone>Call Now</a>
       </div>
     </div>
   </section>
 
-  <section id="contact" class="scroll-margin">
-    <div class="wrap">
-      <h2>Contact</h2>
-      <p class="section-lead muted">Free estimate. Call or request a quote.</p>
-      <div class="cta-row">
-        <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
-        <a class="btn primary" href="../../quote.html">Get a Quote</a>
+  <section id="services" class="section section-services">
+    <div class="container">
+      <h2 class="section-title">What we do</h2>
+      <p class="section-lead">Residential and light commercial. From small repairs to full remodels.</p>
+      <div class="services-grid">
+        <article class="service-card">
+          <div class="service-icon">⌂</div>
+          <h3>Kitchen &amp; bath</h3>
+          <p>Full remodels, cabinets, countertops, tile, and fixtures. We handle design and build.</p>
+        </article>
+        <article class="service-card">
+          <div class="service-icon">⊞</div>
+          <h3>Room additions</h3>
+          <p>Add space that matches your home. Permits, foundation, and finish work included.</p>
+        </article>
+        <article class="service-card">
+          <div class="service-icon">🔧</div>
+          <h3>Repairs &amp; maintenance</h3>
+          <p>Drywall, flooring, trim, doors, and handyman work. No job too small.</p>
+        </article>
       </div>
-      <p class="small top14">This is a demo. Get Quote sends leads to KWebDevelopment.</p>
+      <p class="section-cta"><a href="../../quote.html" class="btn btn-primary">Request a Quote</a></p>
+    </div>
+  </section>
+
+  <section id="gallery" class="section section-gallery">
+    <div class="container">
+      <h2 class="section-title">Recent work</h2>
+      <p class="section-lead">A few projects we’re proud of.</p>
+      <div class="gallery-grid">
+        <div class="gallery-item">
+          <img src="https://images.unsplash.com/photo-1556909212-d5b604d0c90d?w=600&q=80" alt="Kitchen remodel" loading="lazy" />
+          <span class="gallery-caption">Kitchen remodel</span>
+        </div>
+        <div class="gallery-item">
+          <img src="https://images.unsplash.com/photo-1560185893-a55cbc8c57e8?w=600&q=80" alt="Home addition" loading="lazy" />
+          <span class="gallery-caption">Home addition</span>
+        </div>
+        <div class="gallery-item">
+          <img src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?w=600&q=80" alt="Bathroom renovation" loading="lazy" />
+          <span class="gallery-caption">Bathroom renovation</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section section-contact">
+    <div class="container">
+      <h2 class="section-title">Get in touch</h2>
+      <p class="section-lead">Free estimate. Call or request a quote and we’ll get back within 24 hours.</p>
+      <div class="contact-buttons">
+        <a href="tel:+14694436874" class="btn btn-primary" data-kweb-phone>Call (469) 443-6874</a>
+        <a href="../../quote.html" class="btn btn-outline">Get a Quote</a>
+      </div>
+      <p class="demo-note">Demo site · Get Quote sends leads to KWebDevelopment</p>
     </div>
   </section>
 </main>
 
-<footer>
-  <div class="wrap">
-    <a href="../../index.html">Back to KWebDevelopment</a>
-    <a href="../../quote.html" class="btn primary">Get a Quote</a>
-    <span class="small">Demo site</span>
+<footer class="site-footer">
+  <div class="footer-inner">
+    <a href="../../index.html">← Back to KWebDevelopment</a>
+    <a href="../../quote.html" class="btn btn-primary">Get a Quote</a>
   </div>
 </footer>
 
-<div class="demo-sticky-cta">
-  <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
-  <a class="btn primary" href="../../quote.html">Get a Quote</a>
+<div class="sticky-bar">
+  <a href="tel:+14694436874" class="btn btn-outline" data-kweb-phone>Call</a>
+  <a href="../../quote.html" class="btn btn-primary">Get a Quote</a>
 </div>
+
 <script src="../../assets/js/config.js"></script>
 <script src="../../script.js"></script>
 </body>
