Fix general contractor demo: mobile nav and header CTA styles

--- a/demos/general-contractor/index.html
+++ b/demos/general-contractor/index.html
@@ -15,12 +15,14 @@
   <div class="header-inner">
     <a href="../../index.html" class="logo">Riverside Builders</a>
     <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">☰</button>
-    <nav class="main-nav links">
-      <a href="#services">Services</a>
-      <a href="#gallery">Work</a>
-      <a href="#contact">Contact</a>
-      <a href="tel:+14694436874" class="btn-cta" data-kweb-phone>Call</a>
-      <a href="../../quote.html" class="btn-cta btn-primary">Get a Quote</a>
+    <nav>
+      <div class="main-nav links">
+        <a href="#services">Services</a>
+        <a href="#gallery">Work</a>
+        <a href="#contact">Contact</a>
+        <a href="tel:+14694436874" class="btn btn-outline btn-cta" data-kweb-phone>Call</a>
+        <a href="../../quote.html" class="btn btn-primary btn-cta">Get a Quote</a>
+      </div>
     </nav>
   </div>
 </header>
