Replace demo photos (bathroom, plumber fixture, car interior/exterior); main page white/outline reminder

--- a/demos/plumber/index.html
+++ b/demos/plumber/index.html
@@ -88,7 +88,7 @@
           <p>Pipe repair</p>
         </div>
         <div class="gallery-card">
-          <img src="https://images.unsplash.com/photo-1621905251189-08b45d6e6f3e?w=500&q=80" alt="Bathroom plumbing" loading="lazy" />
+          <img src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?w=500&q=80" alt="Bathroom fixture" loading="lazy" />
           <p>Bathroom fixture</p>
         </div>
       </div>
