Mobile optimize for iOS and Android: viewport-fit, safe areas, touch targets, tap highlight, forms

--- a/quote.html
+++ b/quote.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="theme-color" content="#000000" />
   <title>Get a Quote | KWebDevelopment</title>
   <meta name="description" content="Request a quote for your website or local SEO project." />
   <link rel="icon" href="favicon.ico" sizes="any" />
@@ -17,7 +18,7 @@
       <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">Menu</button>
       <div class="links">
         <a href="index.html#services">Services</a>
-        <a href="index.html#process">Process</a>
+        <a href="index.html#examples">Examples</a>
         <a href="index.html#pricing">Pricing</a>
         <a href="index.html#contact">Contact</a>
       </div>
