--- a/demos/general-contractor/index.html
+++ b/demos/general-contractor/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="theme-color" content="#2c1810" />
   <title>Riverside Builders | Remodeling &amp; Construction</title>
   <meta name="description" content="Licensed general contractor. Kitchens, baths, additions. Free estimates. Dallas–Fort Worth." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
