--- a/demos/plumber/index.html
+++ b/demos/plumber/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="theme-color" content="#0c4a6e" />
   <title>FlowRight Plumbing | 24/7 Plumbing &amp; Drain Services</title>
   <meta name="description" content="Residential and commercial plumbing. Repairs, installations, drain cleaning. 24/7 emergency service. Dallas–Fort Worth." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
