--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#2563eb" />
   <title>KWebDevelopment | TX Web Design for Local Businesses</title>
   <meta name="description" content="KWebDevelopment builds fast, modern websites for local businesses in Texas. Mobile-first design, speed, and SEO basics included." />
   <meta property="og:title" content="KWebDevelopment | TX Web Design for Local Businesses" />
