--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#0a0a0a" />
   <title>Privacy &amp; SMS | KWebDevelopment</title>
   <meta name="description" content="Privacy policy and SMS consent for KWebDevelopment. How we use your data and how to opt out of text messages." />
   <link rel="icon" href="favicon.ico" sizes="any" />
