--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#0a0a0a" />
   <title>Thank you | KWebDevelopment</title>
   <meta name="description" content="Thanks for your request. We’ll be in touch soon." />
   <link rel="icon" href="favicon.ico" sizes="any" />
