--- a/discount.html
+++ b/discount.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#0a0a0a" />
+  <meta name="theme-color" content="#040814" />
   <title>Special Offer | KWebDevelopment</title>
   <meta name="description" content="Get a discount on your next project. Limited-time offer for new and returning customers." />
   <link rel="icon" href="favicon.ico" sizes="any" />
