--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#0a0a0a" />
+  <meta name="theme-color" content="#040814" />
   <title>Page not found | KWebDevelopment</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="assets/css/toolkit.css" />
