--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="theme-color" content="#0a0a0a" />
+  <meta name="theme-color" content="#040814" />
   <title>KWebDevelopment | TX Web Design for Local Businesses</title>
   <meta name="description" content="KWebDevelopment builds fast, modern websites for local businesses in Texas. Mobile-first design, speed, and SEO basics included." />
   <meta property="og:title" content="KWebDevelopment | TX Web Design for Local Businesses" />
@@ -39,30 +39,41 @@
 </header>
 
 <main>
-  <div class="wrap hero">
-    <div class="grid hero-grid">
-      <div>
-        <div class="pill">Texas (TX) • DFW • Fast • Mobile-First</div>
-        <h1>Websites that turn visitors into calls.</h1>
-        <p>
-          I build clean, modern websites for local businesses in Texas—optimized for mobile, speed,
-          and SEO basics so you can look legit and book more work.
-        </p>
-        <div class="cta-row">
-          <a class="btn primary" href="quote.html">Get a Quote</a>
-          <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
+  <div class="hero-outer">
+    <div class="hero-media" aria-hidden="true">
+      <!-- TODO: Add assets/hero/hero.mp4 (5–10s loop, muted, H.264/MP4, ~1920×1080). See assets/hero/README.txt -->
+      <video class="hero-video" autoplay muted loop playsinline preload="metadata" poster="assets/hero/hero.jpg" title="">
+        <source src="assets/hero/hero.mp4" type="video/mp4" />
+      </video>
+      <!-- Static fallback when prefers-reduced-motion; background so missing hero.jpg still shows gradient -->
+      <div class="hero-poster-fallback" style="--hero-poster: url('assets/hero/hero.jpg');"></div>
+    </div>
+    <div class="hero-overlay" aria-hidden="true"></div>
+    <div class="wrap hero">
+      <div class="grid hero-grid">
+        <div>
+          <div class="pill">Texas (TX) • DFW • Fast • Mobile-First</div>
+          <h1>Websites that turn visitors into calls.</h1>
+          <p>
+            I build clean, modern websites for local businesses in Texas—optimized for mobile, speed,
+            and SEO basics so you can look legit and book more work.
+          </p>
+          <div class="cta-row">
+            <a class="btn primary" href="quote.html">Get a Quote</a>
+            <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
+          </div>
+          <p class="muted top12">Email: <a href="#" class="link" data-kweb-email>kwebdevelopmenttx@gmail.com</a> · <a href="privacy.html" class="link">Privacy</a></p>
         </div>
-        <p class="muted top12">Email: <a href="#" class="link" data-kweb-email>kwebdevelopmenttx@gmail.com</a> · <a href="privacy.html" class="link">Privacy</a></p>
-      </div>
-      <div class="card">
-        <strong>Quick Wins Included</strong>
-        <ul>
-          <li>Mobile-first layout</li>
-          <li>Fast load speed</li>
-          <li>SEO basics (titles, headings, keywords)</li>
-          <li>Contact form + click-to-call</li>
-          <li>Google Maps embed (optional)</li>
-        </ul>
+        <div class="card">
+          <strong>Quick Wins Included</strong>
+          <ul>
+            <li>Mobile-first layout</li>
+            <li>Fast load speed</li>
+            <li>SEO basics (titles, headings, keywords)</li>
+            <li>Contact form + click-to-call</li>
+            <li>Google Maps embed (optional)</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
