--- a/pay.html
+++ b/pay.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#0a0a0a" />
+  <meta name="theme-color" content="#040814" />
   <title>Choose a plan | KWebDevelopment</title>
   <meta name="description" content="Pick your plan to reserve your build slot. Starter or Business — start today." />
   <link rel="icon" href="favicon.ico" sizes="any" />
