--- a/quote.html
+++ b/quote.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="theme-color" content="#0a0a0a" />
+  <meta name="theme-color" content="#040814" />
   <title>Get a Quote | KWebDevelopment</title>
   <meta name="description" content="Request a quote for your website or local SEO project." />
   <link rel="icon" href="favicon.ico" sizes="any" />
