--- a/review.html
+++ b/review.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="theme-color" content="#0a0a0a" />
+  <meta name="theme-color" content="#040814" />
   <title>Leave a Review | KWebDevelopment</title>
   <meta name="description" content="Share your experience. Leave a Google review or send us private feedback." />
   <link rel="icon" href="favicon.ico" sizes="any" />
