--- a/review.html
+++ b/review.html
@@ -36,7 +36,7 @@
       <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">Menu</button>
       <div class="links">
         <a href="index.html#services">Services</a>
-        <a href="index.html#pricing">Pricing</a>
+        <a href="index.html#examples">Examples</a>
         <a href="index.html#contact">Contact</a>
         <a href="review.html">Review</a>
         <a href="quote.html">Get a Quote</a>
