--- a/pay.html
+++ b/pay.html
@@ -19,16 +19,14 @@
       <div class="logo"><a href="index.html">KWebDevelopment</a></div>
       <div class="links">
         <a href="index.html#services">Services</a>
-        <a href="index.html#process">Process</a>
-        <a href="index.html#pricing">Pricing</a>
+        <a href="index.html#examples">Examples</a>
         <a href="index.html#contact">Contact</a>
         <a href="review.html">Review</a>
-        <a href="discount.html">Offer</a>
         <a href="privacy.html">Privacy</a>
       </div>
-      <div class="nav-cta tk-nav-cta">
-        <a class="btn tk-btn-call" href="#">Call</a>
-        <a class="btn primary tk-btn-get-started" href="index.html#contact" data-tk-calendly>Get Started</a>
+      <div class="nav-cta">
+        <a class="btn" href="tel:+14694436874" data-kweb-phone>Call</a>
+        <a class="btn primary" href="quote.html">Get a Quote</a>
       </div>
     </nav>
   </div>
@@ -52,8 +50,8 @@
   <div class="wrap">
     <a href="privacy.html">Privacy</a>
     <a href="review.html">Review</a>
-    <a href="discount.html">Offer</a>
     <a href="index.html" class="link">Home</a>
+    <a href="quote.html" class="btn primary">Get a Quote</a>
     <span class="small">Built by KWebDevelopment · TX / DFW</span>
   </div>
 </footer>
@@ -63,6 +61,7 @@
 </div>
 
 <script src="assets/js/config.js"></script>
+<script src="script.js"></script>
 <script src="assets/js/toolkit.js"></script>
 <script>
 (function () {
