--- a/thanks.html
+++ b/thanks.html
@@ -18,8 +18,7 @@
       <button type="button" class="nav-toggle" aria-label="Menu" aria-expanded="false">Menu</button>
       <div class="links">
         <a href="index.html#services">Services</a>
-        <a href="index.html#process">Process</a>
-        <a href="index.html#pricing">Pricing</a>
+        <a href="index.html#examples">Examples</a>
         <a href="index.html#contact">Contact</a>
       </div>
       <div class="nav-cta">
